Split related works, inserted references and minor corrections

--- a/cog-paper.tex
+++ b/cog-paper.tex
@@ -103,15 +103,19 @@ The most visited decision is usually the one returned. Given enough computation 
 
 \section{Related Works}
 
+\subsection{Search Space Reduction}
+
 Dealing with the enormous RTS decision space in the context of MCTS is an open problem, continuously receiving contributions. By treating the selection phase as a CMAB, NaïveMCTS effectively adapts MCTS to combinatorial search spaces, nevertheless, the decision space remains the same, and the algorithm still suffers from the high dimensionality. Downsizing the search space's dimensionality is usually done through action abstraction or machine learning.
 
 Abstracting the search space, by means of expert-authored scripts, is an effective way to considerably reduce the branching factor. Instead of searching in the whole low-level player-actions space, Justesen et al \cite{justesen_script-_2014} adapted UCT to search in the space of player-actions suggested by scripts. NaïveMCTS was also adapted the same way by Moraes et al \cite{moraes_action_2018}, with the incorporation of asymmetric abstraction \cite{moraes_asymmetric_2018}, allowing multi-script and multi-level search. Puppet Search \cite{barriga_puppet_2015} employs UCT to search in the space of choice points, inserted into scripts. Guided NaïveMCTS (GNS) \cite{yang_guiding_2019} uses scripts to bias the selection phase towards considering scripted actions first. Several other search algorithms were also used in combination with action abstraction, such as local search in Portfolio Greedy Search (PGS) \cite{churchill_portfolio_2013}, and minimax in AHTN \cite{ontanon_adversarial_2015}.
 
 Techniques that rely on machine learning try to learn a tree policy, from expert traces, that nudges the selection phase towards more promising expert actions. AlphaGo \cite{silver_mastering_2016} employs a CNN-based policy network, learned from a large dataset of expert Go replays. Ontañón introduced InformedMCTS in \mRTS{}, which makes use of a learned Bayesian model, to inform the selection phase of MCTS. Yang and Ontañón \cite{yang_extracting_2019} later demonstrated the effectiveness of C4.5 classifier for such tasks, due to its speed and accuracy.
 
+\subsection{Move Pruning}
+
 If we adjust our perspective, the aforementioned approaches can all be regarded as move pruning approaches \cite{yang_integrating_2020}. By focusing on a set of promising, expert-based player-actions, theses approaches effectively prune the search space of all the remaining player-actions, significantly reducing the branching factor. Regardless, such a practice can also be unsafe and prone to exploitation, due to the coarser player-actions, resulting in a loss of tactical performance. To address this issue, several approaches combining low- and high-level search have emerged, such as \cite{barriga_combining_2017}, \cite{neufeld_hybrid_2019} and \cite{moraes_action_2018}.
 
-Directly pruning player-actions, responsible for weak playing strength, can be an alternative approach towards focusing search on promising actions, without compromising tactical strength. In the context Chess and Shogi, $\alpha\beta$ search was enhanced by several forward pruning methods, such as Null-move pruning and futility pruning, that reduce the branching factor by removing statistically weak moves. In Go, a domain-dependent pruning approach was implemented in UCT \cite{huang_pruning_2010-1}, exploiting territory information. Similar techniques were used in Hex, Havannah and DeadEnd for MCTS. In video-games, Sephton et al applied a heuristic-knowledge based move pruning approach for the AI of the commercial game Lords of War.
+Directly pruning player-actions, responsible for weak playing strength, can be an alternative approach towards focusing search on promising actions, without compromising tactical strength. In the context Chess \cite{heinz_adaptive_1999} and Shogi \cite{hoki_efficiency_2012}, $\alpha\beta$ search was enhanced by several forward pruning methods, such as Null-move pruning and futility pruning, that reduce the branching factor by removing statistically weak moves. In Go, a domain-dependent pruning approach was implemented in UCT \cite{huang_pruning_2010-1}, exploiting territory information. Similar MCTS improvements were applied in Hex \cite{arneson_monte_2010-1}, Havannah \cite{dugueperoux_pruning_2016} and DeadEnd \cite{he_game_2008-1}. In video-games, Sephton et al \cite{sephton_heuristic_2014} also enhanced MCTS by applying a knowledge-based move pruning approach for the strategic card game, Lords of War. In this paper we apply a domain-dependent hard-pruning approach, for MCTS agents in RTS games, targeting a specific type of player-actions.
 
 \section{Move Pruning}
 
